# etl-from-excel

./: .env.example  .gitignore  CODEOWNERS  README.md  pyproject.toml
etl_from_excel/: discord_bot.py  etl.py  main.py  send_to_airtable.py  treat_data.py
etl_from_excel/utils/: get_dataset_columns.py  rename_to_snake_case.py
tests/: test_discord_bot.py  test_etl.py
